jpashop inherited relationship mapping

--- a/jpabook/pom.xml
+++ b/jpabook/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>jpabook</artifactId>
+    <artifactId>jpa-basic</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.3.10.Final</version>
+            <version>5.4.13.Final</version>
         </dependency>
 
         <!-- H2 데이터베이스 -->
@@ -45,5 +45,4 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
 </project>
